<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="com.wiliamks.temaqui.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home" />

    <fragment
            android:id="@+id/navigation_buy"
            android:name="com.wiliamks.temaqui.ui.buy.fragment.BuyFragment"
            android:label="@string/title_buy"
            tools:layout="@layout/fragment_buy" />

    <fragment
            android:id="@+id/navigation_notifications"
            android:name="com.wiliamks.temaqui.ui.notifications.NotificationsFragment"
            android:label="@string/title_notifications"
            tools:layout="@layout/fragment_notifications" />

    <fragment
            android:id="@+id/navigation_profile"
            android:name="com.wiliamks.temaqui.ui.profile.fragment.ProfileFragment"
            android:label="@string/title_notifications"
            tools:layout="@layout/fragment_notifications" />
</navigation>