<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/main_background">

    <ImageView
            android:id="@+id/button_arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_ios_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/back_button_accessibility"/>

    <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_title_cart"
            android:textSize="18sp"
            android:textColor="@color/main_text_color"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/button_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_cart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/text_title"
            app:layout_constraintBottom_toTopOf="@id/card_coupon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/item_cart"
            tools:itemCount="2"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" />

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_coupon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/text_subtotal_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_coupon"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="32dp"
            app:strokeColor="@color/cart_coupon_border_color"
            app:strokeWidth="1dp"
            app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/edit_coupon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:hint="@string/cart_hint_coupon"
                    android:autofillHints="name"
                    android:textSize="12sp"
                    android:textColorHint="@color/cart_coupon_hint_color"
                    android:maxLines="1"
                    android:inputType="text"
                    android:imeOptions="actionSend"
                    android:background="@android:color/transparent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
            android:id="@+id/btn_coupon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_button_apply_coupon"
            android:textAllCaps="false"
            android:textSize="12sp"
            app:layout_constraintTop_toTopOf="@id/card_coupon"
            app:layout_constraintStart_toEndOf="@id/card_coupon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/card_coupon"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"/>

    <TextView
            android:id="@+id/text_subtotal_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_subtotal_title"
            app:layout_constraintBottom_toTopOf="@id/text_coupon_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="8dp"/>

    <TextView
            android:id="@+id/text_subtotal_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="R$ 121,99"
            android:textColor="@color/main_text_color"
            app:layout_constraintTop_toTopOf="@id/text_subtotal_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="32dp"/>

    <TextView
            android:id="@+id/text_coupon_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_coupon_title"
            app:layout_constraintBottom_toTopOf="@id/text_delivery_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="8dp"/>

    <TextView
            android:id="@+id/text_coupon_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="R$ 0,00"
            android:textColor="@color/main_text_color"
            app:layout_constraintTop_toTopOf="@id/text_coupon_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="32dp"/>

    <TextView
            android:id="@+id/text_delivery_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_delivery_title"
            app:layout_constraintBottom_toTopOf="@id/view_divider"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="8dp"/>

    <TextView
            android:id="@+id/text_delivery_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="R$ 15,00"
            android:textColor="@color/main_text_color"
            app:layout_constraintTop_toTopOf="@id/text_delivery_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="32dp"/>

    <View
            android:id="@+id/view_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/cart_divider_color"
            app:layout_constraintBottom_toTopOf="@id/text_total_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"/>

    <TextView
            android:id="@+id/text_total_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_total_title"
            android:textColor="@color/main_text_color"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/button_finish"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp"/>

    <TextView
            android:id="@+id/text_total_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="R$ 20,00"
            android:textColor="@color/main_text_color"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/button_finish"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="32dp"/>

    <Button
            android:id="@+id/button_finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cart_finish_buy"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="96dp"
            android:layout_marginEnd="96dp"
            android:layout_marginBottom="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>