<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/main_background">

    <ImageView
            android:id="@+id/button_arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_ios_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/back_button_accessibility"/>

    <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personalize_title"
            android:textSize="18sp"
            android:textColor="@color/main_text_color"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/button_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_cart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/text_title"
            app:layout_constraintBottom_toTopOf="@id/view_divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/item_partner"
            tools:itemCount="3"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" />

    <View
            android:id="@+id/view_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/personalization_divider_color"
            app:layout_constraintBottom_toTopOf="@id/text_total_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"/>
    
    <TextView
            android:id="@+id/text_total_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personalize_total_title"
            android:textColor="@color/main_text_color"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/button_finish"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp"/>

    <TextView
            android:id="@+id/text_total_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="R$ 20,00"
            android:textColor="@color/main_text_color"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/button_finish"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="32dp"/>

    <Button
            android:id="@+id/button_finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/personalize_finish_personalization"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="96dp"
            android:layout_marginEnd="96dp"
            android:layout_marginBottom="64dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>