<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:paddingBottom="16dp">

    <ImageView
            android:id="@+id/img_product"
            android:layout_width="75dp"
            android:layout_height="75dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:src="@drawable/camiseta"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@null"/>

    <TextView
            android:id="@+id/text_bought"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bottom_sheet_successfully_added"
            android:textColor="@color/main_text_color"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/img_product"
            app:layout_constraintStart_toEndOf="@id/img_product"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:id="@+id/text_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Camiseta cinza"
            android:textColor="@color/main_text_color"
            app:layout_constraintTop_toBottomOf="@id/text_bought"
            app:layout_constraintStart_toEndOf="@id/img_product"
            app:layout_constraintEnd_toEndOf="parent"/>


    <Button
            android:id="@+id/button_go_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bottom_sheet_go_to_cart"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/img_product"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="4dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    <Button
            android:id="@+id/button_go_shopping"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bottom_sheet_keep_buying"
            android:textAllCaps="false"
            android:backgroundTint="@color/main_background"
            android:textColor="@color/accent_color"
            app:layout_constraintTop_toBottomOf="@id/button_go_cart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="4dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>