<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background"
        tools:context=".ui.buy.fragment.BuyFragment"
        android:paddingBottom="58dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
            android:id="@+id/card_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/icon_cart"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/buy_search_hint"
                        app:layout_constraintTop_toTopOf="parent"
                        android:background="@android:color/transparent"
                        android:textColorHint="@color/buy_search_hint_color"
                        android:textSize="14sp"
                        android:maxLines="1"
                        android:inputType="text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/icon_search"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="8dp"/>

                <ImageView
                        android:id="@+id/icon_search"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:src="@drawable/search"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:contentDescription="@null"/>


            </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
            android:id="@+id/icon_cart"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/cart"
            app:layout_constraintTop_toTopOf="@id/card_search"
            app:layout_constraintBottom_toBottomOf="@id/card_search"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/buy_cart_button"
            />

    <TextView
            android:id="@+id/text_category_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/buy_category_title"
            app:layout_constraintTop_toBottomOf="@id/card_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/text_see_all_category"
            android:textStyle="bold"
            android:textColor="@color/main_text_color"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"/>

    <TextView
            android:id="@+id/text_see_all_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_all"
            android:textColor="@color/accent_color"
            app:layout_constraintTop_toTopOf="@id/text_category_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_category_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_categoria"
            tools:itemCount="1"/>

    <TextView
            android:id="@+id/text_recomendation_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/buy_recomendation_title"
            app:layout_constraintTop_toBottomOf="@id/recycler_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/text_see_all_category"
            android:textStyle="bold"
            android:textColor="@color/main_text_color"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"/>

    <TextView
            android:id="@+id/text_see_all_recomendations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_all"
            android:textColor="@color/accent_color"
            app:layout_constraintTop_toTopOf="@id/text_recomendation_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_recomendations"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_recomendation_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/item_recomendacao"
            tools:orientation="horizontal"
            tools:itemCount="2"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>