<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        
        <ImageView
                android:id="@+id/img_content"
                android:layout_width="75dp"
                android:layout_height="75dp"
                tools:src="@drawable/camiseta"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@null"/>
        
        <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Camiseta cinza"
                android:textColor="@color/main_text_color"
                app:layout_constraintTop_toTopOf="@id/img_content"
                app:layout_constraintStart_toEndOf="@id/img_content"
                android:layout_marginStart="16dp"/>

        <TextView
                android:id="@+id/text_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="R$ 20,00"
                android:textColor="@color/main_text_color"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/text_name"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"/>

        <TextView
                android:id="@+id/text_size_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart_size"
                android:textSize="12sp"
                android:textColor="@color/cart_item_size_color"
                app:layout_constraintBottom_toTopOf="@id/text_price"
                app:layout_constraintStart_toStartOf="@id/text_price"/>

        <TextView
                android:id="@+id/text_size_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="M"
                android:textSize="12sp"
                android:textColor="@color/main_text_color"
                app:layout_constraintTop_toTopOf="@id/text_size_title"
                app:layout_constraintBottom_toBottomOf="@id/text_size_title"
                app:layout_constraintStart_toEndOf="@id/text_size_title"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp">
            <Button
                    android:id="@+id/button_minus"
                    android:theme="@style/Theme.AppCompat.DayNight"
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:text="@string/details_minus"
                    android:textColor="@color/main_text_color"
                    android:textSize="18sp"
                    android:background="@drawable/button_rounded_background"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                    android:id="@+id/text_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="1"
                    android:textSize="18sp"
                    android:textColor="@color/main_text_color"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/button_minus"
                    android:layout_marginStart="16dp" />

            <Button
                    android:id="@+id/button_plus"
                    android:theme="@style/Theme.AppCompat.DayNight"
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:text="@string/details_plus"
                    android:textColor="@color/main_text_color"
                    android:backgroundTint="@color/white"
                    android:textSize="18sp"
                    android:background="@drawable/button_rounded_background"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/text_quantity"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="16dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>